# Verta-eCom-Chatbot

./: .gitignore  API_README.md  Dockerfile  README.md  app.py  dvc.yaml  main.py  prompts.yaml  pyproject.toml  requirements.txt  serve.py  test.py
.github/workflows/: google-cloudrun-docker.yml  production.yml  staging.yml
README FILES/: README-WORKFLOW.MD  README_BASEMODELDOCS.MD  README_COSTANALYSIS.MD
config/: config.yaml  prompts.yaml
evaluation/metrics/: base-scores.json  bias-scores.json
evaluation/results/: base-results.parquet  base.parquet  version0-results.parquet  version0.parquet
evaluation/testset/: 00f81186-c605-46cf-84ed-568965c15961.parquet  021d66d1-3dcf-4abd-8fc3-2b9931af24ce.parquet  04361c01-68d5-445a-821b-32be73c2978e.parquet  04475f52-5551-464c-b3a8-af0a4f438c7b.parquet  07b38834-ec96-4951-ae61-8a838e4c0dc7.parquet  0a5fdd82-fe15-476a-a6ba-e769b336aa84.parquet  0a91cee6-f922-488b-a166-2fad617c7634.parquet  0ed2a133-d4f8-4180-bcef-b72c95355bff.parquet  (+82 more)
notebooks/: 05_play_mflow_logging.ipynb  07_play_rag_evaluation.ipynb  trials.ipynb
readme/: 00_ML_PIPELINES.md  01_BASE_MODEL.md  02_TEST_INGESTION.md  03_MODEL_EVALUATION.md  04_BIAS_DETECTION.md  API_README.md  COST_ANALYSIS.md  FOLDER_STRUCTURE.md  LOGGING_MONITORING.MD  README_BASEMODELDOCS.MD  README_COSTANALYSIS.MD  README_DATAPIPELINE.MD  README_ROLLBACK.MD  VERSION_ROLLBACK.md
src/: bias_detection.py  failure_detection.py  graph.py  main.py  model_evaluation.py  old_graph.py  serve.py  test_ingestion.py
src/components/: agents.py  (+3 more)
test/: test_question.py
tests/: test.py
(+18 files in other folders)
